service/tests/snapshots/test__authentication__google__complete__invalid_client.snap
---
source: tests/test.rs
expression: res.headers()
---
HTTP/1.1 400 Bad Request
content-type: application/problem+json
